# pdmonad

./: README.md  mypatch.pd  pdmonad.cabal
.github/workflows/: haskell.yml
app/: Main.hs  PdMonad.hs  Pdmonad.hs
app/PdMonad/: Core.hs  Graphviz.hs  Identifiers.hs  Main.hs
src/: PdMonad.hs
src/PdMonad/: GraphOps.hs  Pd.hs  PdOps.hs
