cabal-version:      3.6
name:               pdmonad
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sss-create
maintainer:         aee8d900@tutanota.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable pdmonad
    main-is:          PdMonad/Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: PdMonad
                 , PdMonad.Identifiers
                 , PdMonad.Core

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , text
                    , graphviz
                    , fgl
    hs-source-dirs:   app
    default-language: Haskell2010
