cabal-version:      3.6
name:               pdmonad
version:            0.1.0.0

-- A short (one-line)  of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sss-create
maintainer:         aee8d900@tutanota.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library 
    -- Modules included in this executable, other than Main.
    exposed-modules:  PdMonad
                      PdMonad.Pd
                      PdMonad.PdOps
                      PdMonad.GraphOps
    build-depends:    base ^>=4.17.2.0
                    , text
                    , graphviz
                    , fgl
    hs-source-dirs:   src
    default-language: Haskell2010


executable pdmonad
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.17.2.0
                    , pdmonad
                    , text
                    , graphviz
                    , fgl
    default-language: Haskell2010
